# spattle

./: .env.example  .gitignore  DEVELOPMENT.md  Dockerfile.backend  Dockerfile.frontend  README.md  SECURITY_SETUP.md  TODO.txt  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  package-lock.json  package.json  pyproject.toml  reset-db.sh  setup-db.sh  setup.sh  start-backend.sh  start-dev-backend.sh  start-dev-frontend.sh  start-frontend.sh  vars.sh.example
alembic/: env.py
alembic/versions/: 018d4c6db066_initial_tables.py  09f1a74f084e_initial_tables.py  1f8bd8ff1611_initial_tables.py  3e6207bbf620_initial_tables.py  539020d00d91_initial_tables.py  5971e40397c2_initial_tables.py  5f772db1c933_initial_tables.py  b4b941416619_initial_tables.py  cc774fd085fd_initial_tables.py
app/: main.py
app/api/v1/: api.py
app/core/: config.py
app/models/: models.py
app/schemas/: schemas.py  validators.py
app/services/: auth_service.py  battle_service.py  crypto_service.py  strava_service.py  user_service.py
frontend/: package-lock.json  package.json
frontend/public/: dnaParticlesBg.js  index.html  test.html
frontend/src/: App.css  App.tsx  index.tsx
frontend/src/components/: BackgroundContext.tsx  BattleGrid.tsx  Challenge.tsx  ChallengeMeter.tsx  Footer.tsx  Map.tsx  Navbar.tsx  sideNavbar.tsx  utils.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Battles.tsx  Contact.tsx  DataProtect.tsx  Home.tsx  Impressum.tsx  Login.tsx  Party.tsx  Register.tsx
tests/: test_main.py
(+8 files in other folders)
